@@ -1,3 +1,8 @@
+leJOS 1.0.0alpha3:
+------------------
+  
+  - ButtonListener support.
+  
 leJOS 1.0.0alpha2:
 ------------------
 
